--- a/package.json
+++ b/package.json
@@ -5,15 +5,11 @@
     "main": "webpack.config.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack --watch --mode=development",
-        "build": "webpack",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "start": "webpack --watch --mode=development"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "homepage": "http://mitchelsevere.github.io/minesweeper",
     "babel": {
         "presets": [
             "@babel/preset-env",
@@ -30,7 +26,9 @@
         "@babel/preset-env": "^7.6.3",
         "@babel/preset-react": "^7.6.3",
         "babel-loader": "^8.0.6",
+        "css-loader": "^3.2.0",
         "gh-pages": "^2.1.1",
+        "style-loader": "^1.0.0",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9"
     }
